--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(grpc_async LANGUAGES CXX)
+project(grpc_plugins LANGUAGES CXX)
 
 find_package(gRPC   CONFIG REQUIRED)
 
@@ -12,34 +12,39 @@ message(STATUS "using vcpkg: ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 # gRPC C++
-add_library(grpc_async_core
-    include/service_core.h
+add_library(plugin_core SHARED
+    include/plugin_core.h
+    include/plugin_loader.h
     src/libmain.cpp
+
+    src/grpc_coroutine.h
+    src/grpc_coroutine.cpp
     src/grpc_service.cpp
-    src/process.cpp
+    src/grpc_types.cpp
 )
 
-target_include_directories(grpc_async_core
+target_include_directories(plugin_core
 PRIVATE
     ${PROJECT_SOURCE_DIR}/static
-    ${PROJECT_SOURCE_DIR}/external/cpp-subprocess
 PUBLIC
-    ${PROJECT_SOURCE_DIR}/include
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
     ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include
 )
 
-target_link_directories(grpc_async_core
+target_link_directories(plugin_core
 PUBLIC
     ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib
 )
 
-target_link_libraries(grpc_async_core
+target_link_libraries(plugin_core
 PUBLIC
+    ${CMAKE_DL_LIBS}
     gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc_cronet
 )
 
 if(MSVC)
-    target_compile_options(grpc_async_core
+    target_compile_options(plugin_core
     PUBLIC
         /W4 /await
     )
@@ -47,9 +52,23 @@ endif()
 
 # run protobuf compiler and generate files
 include(grpc_codegen_targets)
-add_dependencies(grpc_async_core generate_grpc_files_cpp)
+add_dependencies(plugin_core run_protoc_cpp)
 
-target_sources(grpc_async_core
+add_custom_command(
+    COMMENT     "generating grpc++ files"
+    OUTPUT      ${PROJECT_SOURCE_DIR}/static/service.pb.h
+                ${PROJECT_SOURCE_DIR}/static/service.pb.cc
+                ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.h
+                ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.cc
+    COMMAND     ${proto_compiler_path} --version
+    COMMAND     ${proto_compiler_path} service.proto
+                    --cpp_out=${PROJECT_SOURCE_DIR}/static
+    COMMAND     ${proto_compiler_path} service.proto
+                    --grpc_out=${PROJECT_SOURCE_DIR}/static
+                    --plugin="protoc-gen-grpc=${grpc_cpp_plugin_path}"
+)
+
+target_sources(plugin_core
 PRIVATE
     static/service.grpc.pb.h
     static/service.grpc.pb.cc
@@ -57,42 +76,50 @@ PRIVATE
     static/service.pb.cc
 )
 
-set_target_properties(grpc_async_core
+set_target_properties(plugin_core
 PROPERTIES
     CXX_STANDARD 20
     WINDOWS_EXPORT_ALL_SYMBOLS True
 )
-target_compile_definitions(grpc_async_core
+
+target_compile_definitions(plugin_core
 PRIVATE
-    WIN32_LEAN_AND_MEAN NOMINMAX
-    _WIN32_WINNT=0x0A00
+    PLATFORM_NAME=L"${CMAKE_SYSTEM_NAME}"
 )
 
-# ... testing comes here ...
-enable_testing()
-find_package(Catch2 CONFIG REQUIRED)
+if(WIN32)
+    target_compile_definitions(plugin_core
+    PRIVATE
+        WIN32_LEAN_AND_MEAN NOMINMAX
+        _WIN32_WINNT=0x0A00
+    )
+endif()
 
-set(TEST_SUITE ${PROJECT_NAME}_test_suite)
-add_executable(${TEST_SUITE}
-    test/test_main.cpp
-)
+# # ... testing comes here ...
+# enable_testing()
+# find_package(Catch2 CONFIG REQUIRED)
 
-set_target_properties(${TEST_SUITE}
-PROPERTIES
-    CXX_STANDARD 20
-)
+# set(TEST_SUITE ${PROJECT_NAME}_test_suite)
+# add_executable(${TEST_SUITE}
+#     test/test_main.cpp
+# )
 
-target_include_directories(${TEST_SUITE}
-PRIVATE
-    ${PROJECT_SOURCE_DIR}/test
-    ${PROJECT_SOURCE_DIR}/static
-)
+# set_target_properties(${TEST_SUITE}
+# PROPERTIES
+#     CXX_STANDARD 20
+# )
 
-target_link_libraries(${TEST_SUITE}
-PRIVATE
-    grpc_async_core 
-    ${CMAKE_DL_LIBS}
-    Catch2::Catch2
-)
+# target_include_directories(${TEST_SUITE}
+# PRIVATE
+#     ${PROJECT_SOURCE_DIR}/test
+#     ${PROJECT_SOURCE_DIR}/static
+# )
 
-add_test(test_basic_loading ${TEST_SUITE})
+# target_link_libraries(${TEST_SUITE}
+# PRIVATE
+#     plugin_core 
+#     ${CMAKE_DL_LIBS}
+#     Catch2::Catch2
+# )
+
+# add_test(test_basic_loading ${TEST_SUITE})
