--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,63 +1,32 @@
-cmake_minimum_required(VERSION 3.14)
 
-project(grpc_plugins LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.13)
+project(plugins LANGUAGES CXX VERSION 1.0)
 
-find_package(protobuf 3.6 CONFIG REQUIRED)
-find_package(gRPC   CONFIG REQUIRED)
+find_package(protobuf 3.6   CONFIG REQUIRED)
+find_package(gRPC           CONFIG REQUIRED)
 
-if(NOT ${CMAKE_TOOLCHAIN_FILE} MATCHES vcpkg.cmake)
-    message(FATAL_ERROR "This project expects vcpkg toolchain")
-endif()
-message(STATUS "using vcpkg: ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
 
+# run protobuf compiler and generate files
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+include(grpc_codegen_targets)
+include(report-project-info)
 
-# gRPC C++
-add_library(plugin_core SHARED
+
+add_library(plugin_core
     include/plugin_core.h
     src/libmain.cpp
-
     src/plugin_impl.h
     src/plugin_impl.cpp
 )
-
-target_include_directories(plugin_core
-PRIVATE
-    ${PROJECT_SOURCE_DIR}/static
-PUBLIC
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
-    ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include
-)
-
-target_link_directories(plugin_core
-PUBLIC
-    ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib
-)
-
-target_link_libraries(plugin_core
-PUBLIC
-    ${CMAKE_DL_LIBS}
-    protobuf::libprotobuf protobuf::libprotobuf-lite
-)
-
-if(MSVC)
-    target_compile_options(plugin_core
-    PUBLIC
-        /await
-    )
-endif()
-
-# run protobuf compiler and generate files
-include(grpc_codegen_targets)
 add_dependencies(plugin_core run_protoc_cpp)
 
 add_custom_command(
-    COMMENT     "generating grpc++ files"
+    COMMENT     "generating from 'service.proto' ..."
     OUTPUT      ${PROJECT_SOURCE_DIR}/static/service.pb.h
                 ${PROJECT_SOURCE_DIR}/static/service.pb.cc
                 ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.h
                 ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.cc
+    # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
     COMMAND     ${proto_compiler_path} --version
     COMMAND     ${proto_compiler_path} service.proto
                     --cpp_out=${PROJECT_SOURCE_DIR}/static
@@ -65,7 +34,6 @@ add_custom_command(
                     --grpc_out=${PROJECT_SOURCE_DIR}/static
                     --plugin="protoc-gen-grpc=${grpc_cpp_plugin_path}"
 )
-
 target_sources(plugin_core
 PRIVATE
     static/service.pb.h
@@ -74,8 +42,22 @@ PRIVATE
 
 set_target_properties(plugin_core
 PROPERTIES
-    CXX_STANDARD 20
-    WINDOWS_EXPORT_ALL_SYMBOLS True
+    CXX_STANDARD 17
+    # WINDOWS_EXPORT_ALL_SYMBOLS True
+)
+
+target_include_directories(plugin_core
+PRIVATE
+    ${PROJECT_SOURCE_DIR}/static
+PUBLIC
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
+)
+
+target_link_libraries(plugin_core
+PUBLIC
+    ${CMAKE_DL_LIBS}
+    protobuf::libprotobuf protobuf::libprotobuf-lite
 )
 
 target_compile_definitions(plugin_core
@@ -87,12 +69,35 @@ if(WIN32)
     target_compile_definitions(plugin_core
     PUBLIC
         WIN32_LEAN_AND_MEAN NOMINMAX
-        _WIN32_WINNT=0x0A00
+        _WIN32_WINNT=0x0A00 # be explicit
     )
 endif()
 
+if(MSVC)
+    target_compile_options(plugin_core
+    PUBLIC
+        /await
+    )
+else()
+    target_compile_options(plugin_core
+    PUBLIC
+        -fPIC -stdlib=libc++ -fcoroutines-ts
+    )
+endif()
 
-add_executable(plugin_launcher
+if(${CMAKE_TOOLCHAIN_FILE} MATCHES vcpkg.cmake)
+    message(STATUS "using vcpkg: ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
+    target_include_directories(plugin_core
+    PUBLIC
+        ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include
+    )
+    target_link_directories(plugin_core
+    PUBLIC
+        ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib
+    )
+endif()
+
+add_executable(plugin_service
     tools/launcher.cpp
     
     static/service.grpc.pb.h
@@ -107,27 +112,64 @@ add_executable(plugin_launcher
     tools/grpc_handlers.cpp
 )
 
-set_target_properties(plugin_launcher
+set_target_properties(plugin_service
 PROPERTIES
-    CXX_STANDARD 20
+    CXX_STANDARD 17
 )
 
-target_include_directories(plugin_launcher
+target_include_directories(plugin_service
 PRIVATE
     ${PROJECT_SOURCE_DIR}/static
 )
 
-target_link_libraries(plugin_launcher
+target_link_libraries(plugin_service
 PRIVATE
     plugin_core
     gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc_cronet
 )
 
+#
+# generate/install config & version info
+#
+include(CMakePackageConfigHelpers)
+set(VERSION_FILE_PATH   ${CMAKE_BINARY_DIR}/cmake/${PROJECT_NAME}-config-version.cmake)
+write_basic_package_version_file(${VERSION_FILE_PATH}
+    VERSION             ${PROJECT_VERSION}
+    COMPATIBILITY       SameMajorVersion
+)
+install(FILES           ${VERSION_FILE_PATH} 
+        DESTINATION     ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
+)
+
+#
+# proto definition
+#
+install(FILES           service.proto 
+        DESTINATION     ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
+)
+
+#
+# core module + launcher
+#
+install(FILES   ${PROJECT_SOURCE_DIR}/include/plugin_core.h
+                ${PROJECT_SOURCE_DIR}/static/service.pb.h
+                ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.h
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/include
+)
+install(TARGETS         plugin_core plugin_service
+        EXPORT          ${PROJECT_NAME}-config
+        RUNTIME  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+        LIBRARY  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+        ARCHIVE  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+        INCLUDES DESTINATION ${CMAKE_INSTALL_PREFIX}/include
+)
+
+#
 # ... testing comes here ...
-if(NOT CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+#
+if(NOT CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     return()
 endif()
-return()
 
 enable_testing()
 find_package(Catch2 CONFIG REQUIRED)
@@ -139,7 +181,7 @@ add_executable(${TEST_SUITE}
 
 set_target_properties(${TEST_SUITE}
 PROPERTIES
-    CXX_STANDARD 20
+    CXX_STANDARD 17
 )
 
 target_include_directories(${TEST_SUITE}
@@ -151,8 +193,6 @@ PRIVATE
 target_link_libraries(${TEST_SUITE}
 PRIVATE
     plugin_core 
-    ${CMAKE_DL_LIBS}
     Catch2::Catch2
 )
-
 add_test(test_basic ${TEST_SUITE})
