feat: symbol from env + revoke tests
* testing for gRPC completion queue
* created empty module: echo
* ready check for serve functions
* symbol export through env variable
* enforce plugin instance to be unique

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 .vscode
 [Bb]uild
+install
+out
 
 # Created by https://www.gitignore.io/api/go,c++,cmake,visualstudio
 # Edit at https://www.gitignore.io/?templates=go,c++,cmake,visualstudio
