--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ cache:
   directories:
     - ${HOME}/vcpkg/installed
 
+# sudo: required
+
 before_install:
-  - export CC=gcc-8 CXX=g++-8
+  - export CC=gcc-7 CXX=g++-7
 install:
   - | # replace cmake
-    rm -rf $(which cmake)
+    sudo rm -rf $(which cmake)
     sudo bash ./scripts/install-cmake-3.15.sh
     echo $(which cmake)
   - | # prepare vcpkg
@@ -33,8 +35,13 @@ script:
   # install required packages
   - ./vcpkg install protobuf ms-gsl fmt catch2
   - ./vcpkg install openssl[core] c-ares[core] zlib[core]
-  # - ./vcpkg install grpc
+  - export LD_LIBRARY_PATH="$(pwd)/installed/x64-linux/lib"
+  - ./vcpkg install grpc
   - popd
+  - mkdir -p build && pushd build 
+  - cmake .. -DCMAKE_TOOLCHAIN_FILE="${HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake" 
+  - cmake --build . --target run_protoc_cpp
+  - cmake --build . --config debug
 
 matrix:
   include:
@@ -47,12 +54,11 @@ matrix:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-xenial-8
           packages:
-            - ninja-build
             - clang-8
             - libc++abi-8-dev
             - libc++-8-dev
-            - g++-7
             - tree
+            - g++-7
 
     - os: linux
       dist: bionic
@@ -63,7 +69,6 @@ matrix:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-bionic-8
           packages:
-            - ninja-build
             - clang-8
             - libc++abi-8-dev
             - libc++-8-dev
