--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 
-cmake_minimum_required(VERSION 3.13)
-project(plugins LANGUAGES CXX VERSION 1.0)
+cmake_minimum_required(VERSION 3.14)
+project(cpp20_grpc LANGUAGES CXX VERSION 0.1)
 
 find_package(protobuf 3.6   CONFIG REQUIRED)
 find_package(gRPC           CONFIG REQUIRED)
 
-
 # run protobuf compiler and generate files
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+include(project_info)
+include(vcpkg_as_target) # target: vcpkg_meta
 include(grpc_codegen_targets)
-include(report-project-info)
 
 add_custom_command(
     COMMENT     "generating from 'service.proto' ..."
@@ -19,114 +19,17 @@ add_custom_command(
                 ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.cc
     # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
     COMMAND     ${proto_compiler_path} --version
-    COMMAND     ${proto_compiler_path} service.proto
+    COMMAND     ${proto_compiler_path} ${PROJECT_SOURCE_DIR}/service.proto 
+                    --proto_path=${PROJECT_SOURCE_DIR}
                     --cpp_out=${PROJECT_SOURCE_DIR}/static
-    COMMAND     ${proto_compiler_path} service.proto
+    COMMAND     ${proto_compiler_path} ${PROJECT_SOURCE_DIR}/service.proto 
+                    --proto_path=${PROJECT_SOURCE_DIR}
                     --grpc_out=${PROJECT_SOURCE_DIR}/static
                     --plugin="protoc-gen-grpc=${grpc_cpp_plugin_path}"
 )
 
-add_library(plugin_core
-    include/plugin_core.h
-    static/service.pb.h
-
-    src/libmain.cpp
-    src/plugin_impl.h
-    src/plugin_impl.cpp
-    src/plugin_mock.cpp
-
-    static/service.pb.h
-    static/service.pb.cc
-    static/service.grpc.pb.h
-    static/service.grpc.pb.cc
-)
-# add_dependencies(plugin_core run_protoc_cpp)
-
-set_target_properties(plugin_core
-PROPERTIES
-    CXX_STANDARD 17
-    WINDOWS_EXPORT_ALL_SYMBOLS True
-)
-
-target_include_directories(plugin_core
-PRIVATE
-    ${PROJECT_SOURCE_DIR}/static
-PUBLIC
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
-)
-
-target_link_libraries(plugin_core
-PUBLIC
-    ${CMAKE_DL_LIBS}
-    protobuf::libprotobuf # protobuf::libprotobuf-lite
-    gRPC::grpc++ # gRPC::gpr gRPC::grpc gRPC::grpc_cronet
-)
-
-target_compile_definitions(plugin_core
-PRIVATE
-    PLATFORM_NAME=L"${CMAKE_SYSTEM_NAME}"
-)
-
-if(MSVC)
-    target_compile_options(plugin_core
-    PUBLIC
-        /await
-    )
-    target_compile_definitions(plugin_core
-    PUBLIC
-        WIN32_LEAN_AND_MEAN NOMINMAX
-        _WIN32_WINNT=0x0A00 # be explicit
-    )
-elseif(UNIX)
-    target_compile_options(plugin_core
-    PUBLIC
-        -O0 -g
-        -fPIC -stdlib=libc++ -fcoroutines-ts
-    )
-    target_link_libraries(plugin_core
-    PUBLIC
-        c++
-    )
-endif()
-
-if(${CMAKE_TOOLCHAIN_FILE} MATCHES vcpkg.cmake)
-    message(STATUS "using vcpkg: ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
-    target_include_directories(plugin_core
-    PUBLIC
-        ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include
-    )
-    target_link_directories(plugin_core
-    PUBLIC
-        ${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib
-    )
-endif()
-
-add_executable(plugin_service
-    static/service.pb.h
-    static/service.grpc.pb.h
-    
-    tools/launcher.cpp
-    tools/loader.h
-    tools/loader.cpp
-
-    tools/grpc_shared.h
-    tools/grpc_completion_queue.cpp
-    tools/grpc_service.cpp
-    tools/grpc_handlers.cpp
-)
-set_target_properties(plugin_service
-PROPERTIES
-    CXX_STANDARD 17
-)
-target_include_directories(plugin_service
-PRIVATE
-    ${PROJECT_SOURCE_DIR}/static
-)
-target_link_libraries(plugin_service
-PRIVATE
-    plugin_core
-)
+add_subdirectory(modules/core)
+add_subdirectory(modules/service)
 
 #
 # generate/install config & version info
@@ -142,23 +45,30 @@ install(FILES           ${VERSION_FILE_PATH}
 )
 
 #
+# export declared cmake targets
+#
+install(EXPORT      ${PROJECT_NAME}-config
+        NAMESPACE   "${PROJECT_NAME}::"
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
+)
+
+#
 # proto definition
 #
-install(FILES           service.proto 
+install(FILES           ${PROJECT_SOURCE_DIR}/service.proto 
         DESTINATION     ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
 )
 
 #
 # core module + launcher
 #
-install(FILES   ${PROJECT_SOURCE_DIR}/include/plugin_core.h
-                ${PROJECT_SOURCE_DIR}/static/service.pb.h
+install(FILES   ${PROJECT_SOURCE_DIR}/static/service.pb.h
                 ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.h
         DESTINATION ${CMAKE_INSTALL_PREFIX}/include
 )
 
 # https://stackoverflow.com/questions/33991581/install-name-tool-to-update-a-executable-to-search-for-dylib-in-mac-os-x
-install(TARGETS         plugin_core plugin_service
+install(TARGETS         core service
         EXPORT          ${PROJECT_NAME}-config
         RUNTIME  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
         LIBRARY  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
@@ -176,28 +86,4 @@ endif()
 enable_testing()
 find_package(Catch2 CONFIG REQUIRED)
 
-set(TEST_SUITE ${PROJECT_NAME}_test_suite)
-add_executable(${TEST_SUITE}
-    test/test_main.cpp
-    test/test_env.cpp
-    test/test_completion_queue.cpp
-)
-
-set_target_properties(${TEST_SUITE}
-PROPERTIES
-    CXX_STANDARD 17
-)
-
-target_include_directories(${TEST_SUITE}
-PRIVATE
-    ${PROJECT_SOURCE_DIR}/test
-    ${PROJECT_SOURCE_DIR}/static
-)
-
-target_link_libraries(${TEST_SUITE}
-PRIVATE
-    plugin_core
-    Catch2::Catch2
-)
-add_test(test_platform_abi  ${TEST_SUITE} "[abi]")
-add_test(test_grpc_features ${TEST_SUITE} "[grpc]")
+add_subdirectory(test)
