--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+# we can't sure the source code are generated at this moment
+# always create them with 'service.proto'
 add_custom_command(
     COMMENT     "generating from 'service.proto' ..."
     OUTPUT      ${PROJECT_SOURCE_DIR}/static/service.pb.h
@@ -16,8 +18,7 @@ add_custom_command(
                     --plugin="protoc-gen-grpc=${grpc_cpp_plugin_path}"
 )
 
-add_executable(rpc_service
-    main.cpp  
+add_library(rpc_impl SHARED
     signal.cpp
     serve_queue.cpp serve.cpp
     ${PROJECT_SOURCE_DIR}/static/service.pb.h
@@ -26,65 +27,66 @@ add_executable(rpc_service
     ${PROJECT_SOURCE_DIR}/static/service.grpc.pb.cc
 )
 
-set_target_properties(rpc_service
+set_target_properties(rpc_impl
 PROPERTIES
-    CXX_STANDARD 20     # requires CMake 3.12+
+    CXX_STANDARD 17
 )
 
-target_include_directories(rpc_service
+target_include_directories(rpc_impl
 PRIVATE
-    ${VCPKG_INCLUDE_DIRS}
+    # ${VCPKG_INCLUDE_DIRS}
     ${PROJECT_SOURCE_DIR}/static
 PUBLIC
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
 )
 
-target_link_directories(rpc_service
-PRIVATE
-    ${VCPKG_LIB_DIRS}
-)
+# target_link_directories(rpc_impl
+# PRIVATE
+#     ${VCPKG_LIB_DIRS}
+# )
 
-target_link_libraries(rpc_service
+target_link_libraries(rpc_impl
 PRIVATE
-    ${VCPKG_LIBS}
+    vcpkg_meta
 PUBLIC
     protobuf::libprotobuf
     gRPC::grpc++
 )
 
-target_compile_definitions(rpc_service
+target_compile_definitions(rpc_impl
 PRIVATE
     ${VCPKG_DEFINITIONS}
     PLATFORM_NAME=L"${CMAKE_SYSTEM_NAME}"
 )
 
 if(WIN32)
-    set_target_properties(rpc_service
+    set_target_properties(rpc_impl
     PROPERTIES
         WINDOWS_EXPORT_ALL_SYMBOLS True
     )
-    target_compile_definitions(rpc_service
+    target_compile_definitions(rpc_impl
     PRIVATE
         WIN32_LEAN_AND_MEAN NOMINMAX
         _WIN32_WINNT=0x0A00 # be explicit
     )
 elseif(APPLE)
-    target_link_libraries(rpc_service
+    target_link_libraries(rpc_impl
     PRIVATE
         c++
     )
 endif()
 
+# using C++ 20 Coroutines
 if(${CMAKE_CXX_COMPILER_ID} MATCHES Clang)
-    target_compile_options(rpc_service
+    target_compile_options(rpc_impl
     PRIVATE
-        -fmodules-ts
-        -fPIC -stdlib=libc++ -fcoroutines-ts
+        -std=c++2a -fcoroutines-ts -stdlib=libc++
     )
 elseif(MSVC)
-    target_compile_options(rpc_service
-    PUBLIC
-        /await
+    target_compile_options(rpc_impl
+    PRIVATE
+        /std:c++latest /await
     )
 endif()
+
