--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .gradle
 gradle*
 .vscode
-[Bb]uild
+[Bb]uild-*
+cmake
 install
 out
+externals
+conan_imports_manifest.txt
 
 # Created by https://www.gitignore.io/api/go,c++,cmake,visualstudio
 # Edit at https://www.gitignore.io/?templates=go,c++,cmake,visualstudio
